k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pdf-generator-service
spec:
  selector:
    app: pdf-generator-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
